--- a/Deutsch/Barock/style.css
+++ b/Deutsch/Barock/style.css
@@ -13,6 +13,14 @@ div {
     padding: 1px;
 }
 
+div:hover {
+	background-color: black;
+}
+
+#poleContainer:hover {
+	background-color: darkred;
+}
+
 #main-container {
 	text-align: center;
 }
